# ppr-projekt

./: 1-stdin-tcp.c  2-tcp-udp.php  README.md  duze  main-tcp  main-tcp.c  male  python-udp.py  server-tcp.php  server-xml.pl  server_1.pl  srednie
xml-rpc/client/: CMakeLists.txt  main-zad1.c  main-zad2.c
xml-rpc/server/: CMakeLists.txt  main-zad1.c  main-zad2.c
